webpage.css
/* -----------------------MAIN----------------------- */
:root {
    --primary: #0d6efd;
    --dark: #21252f;
    --body: #888;
    --box-shadow: 0 8px 22px rgba(0,0,0,0.1);
}
body {
    font-family: sans-serif;
    letter-spacing: .05em;
}
img {
    width: 100%;
    height: 100%;
}

/* -----------------------NAVBAR----------------------- */
#navbarSupportedContent {
    justify-content: center;
}
.navbar {
    border-bottom: 1px rgba(163, 163, 163, 0.425) solid;
    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.5);
    background-color: rgb(241, 238, 238);
}
.navbar-brand {
    width: 45px;
    height: 45px;
}
.navbar-nav li {
    padding: 0 10px;
}
.navbar-nav li a{
    text-align: center;
}

/*-----------------------COVER-----------------------  */
#cover {
    background-color: rgba(238, 238, 238, 0.15);
}
.cover {
    background-image: url("webpageImgs/cover.png");
    background-position: center;
    background-size: cover;
    background-attachment: fixed;
    position: relative;
    z-index: 2;
}
.coverRow {
    border-radius: 10px;
    padding: 25% 5% 10% 5%;
    background-color: rgba(32, 84, 151, 0.75);
}
.cover::after {
    content: "";
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background-color: rgba(17, 73, 146, 0.25);
    z-index: -1;
}
.coverImg {
}

/* -----------------------BANNER-----------------------*/
#banner-bg {
    z-index: -1;
    position: absolute;
    opacity: 100%;
    padding: 0;
    margin: 0;
}
#banner {
    padding-top: 100px;
    padding-bottom: 50px;
}
.banner-img {
    background-image: url("webpageImgs/sampleImg.png");
    background-position: center;
    background-size: cover;
    min-height: 500px;
}
.banner-content {
    display: flex;
    flex-direction: column;
    padding-top: 30px;
    margin-left: 20px;
}
.banner-subhead {
    color: #004cff;
    width: 25%;
    border-bottom: 1px #004cff groove;
    padding-bottom: 10px;
    text-transform: uppercase;
}
.banner-title {
    color: #000000;
}
.banner-p {
    color: #797c83;

}
.banner-item:first-of-type {
    padding-top: 10px;
}
.banner-item-title{
    color: #000000;

}
.banner-item-p {
    color: #797c83;

}
.iconbox {
    width: 44px;
    height: 44px;
    display: flex;
    background-color: #317dee63;
    border-radius: 50px;
}

/* -----------------------Content-----------------------*/
#content {
    background-color: rgba(43, 177, 211, 0.589);
    padding-top: 50px;
    padding-bottom: 100px;
}
.content-title {
    padding-top: 15%; 
    color: white;
    text-align: center;
}
.content-p {
    color: white;
    padding-top: 5%;
    text-align: center;
}

/* -----------------------Services-----------------------*/
#services {
    background-color: rgba(26, 45, 219, 0.507);
    padding-top: 100px;
    display: flex;
    justify-content: center;
    padding-bottom: 100px;
}
.service-header {
    color: rgb(255, 255, 255);
    padding-bottom: 10px;
}
.service-img {
    width: 80%;
}
.service-title {
    padding-top: 5%; 
    color: white;
}
.service-p {
    color: white;
    padding: 0 10%;
}
.card-hover{
    box-shadow: var(--box-shadow);
    transition: all .5s ease;
    text-align: center;
    padding-bottom: 10px;
}
.card-hover:hover {
    box-shadow: none;
    transform: translateY(5px);
    background-color: #0d6efd;
}
.card-hover:hover button {
    background-color: rgb(235, 229, 229);
    color: black;
}

/* -----------------------PROJECTS-----------------------*/
#projects {
    padding-top: 100px;
}
.projects-content {
    text-align: center;
}
.projects-subhead {
    color: #004cff;
    text-transform: uppercase;
}
.projects-title {
    color: #000000;
}
.projects-p {
    color: #797c83;

}
.project {
    position: relative;
    overflow: hidden;
}
.project .overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(32, 84, 151, 0.75);
    padding: 30px;
    display: flex;
    align-items: flex-end;
    opacity: 0;
}
.project img {
    transition: all .4s ease;
}
.project:hover .overlay{
    opacity: 1;
}
.project:hover img {
    transform: scale(1.1);
}
.project .overlay-content{

}
.project .overlay-title {
    color: #ffffff;
    
}
.project .overlay-h6 {
    color: #ffffff;
}

